httpbin/app/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio.io/rev: prod-canary
